--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,6 +1,6 @@
 @import 'tailwindcss';
 
 @theme {
-   --font-sans : "Poppins", ui-sans-serif, system-ui, -apple-system;
+   --font-sans : "Montserrat", ui-sans-serif, system-ui, -apple-system;
 }
 
